Fixed header overflow on iOS

--- a/css/main.css
+++ b/css/main.css
@@ -396,6 +396,8 @@ body {
   height: 60px;
   position: fixed;
   top: 0;
+  left: 0;
+  right: 0;
   background: #191747;
   z-index: 1000;
   box-shadow: 0px 3px 5px 0px rgba(50, 50, 50, 0.5); }
